Fixed images in blog so that they are not stretched

--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -27,6 +27,7 @@
       flex-wrap: wrap;
       img {
           width: 30%;
+          align-self: center;
         }
       .entry {
           padding: 2%;
